--- a/index.html
+++ b/index.html
@@ -10,29 +10,39 @@
         <div id="container">
             <div id="display-container">
                 <div id="display"></div>
-                <div id="player-selection">
-                    <label for="player-name">Player Name</label>
-                    <input type="text" class="player-name"></input>
+                <div id="reset">
+                    <button id="reset-btn">RESET</button>
                 </div>
                 <div id="scores">
                     <div id="player">
                         <b>Player</b>
-                        <div class="player-score"></div>
+                        <div class="player-score">0</div>
                     </div>
                     <div id="computer">
-                        <div class="comp-score"></div>
+                        <div class="comp-score">0</div>
                         <b>Computer</b>
                     </div>
                 </div>
             </div>
             <div id="game-board">
                 <div id="board-grid">
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
-                    <div class="box"></div>
+                    <div>Game Board</div>
+                    <div id="button-choice">
+                        <button>X</button>
+                        <button>O</button>
+                    </div>
+                    <div id="game-buttons">
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                        <button class="box"></button>
+                    </div>
+                    <div></div> 
                 </div>
             </div>
         </div>
