A little update to UI, and player object has been created

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <div id="container">
             <div id="display-container">
                 <div id="display"></div>
+                <div id="one-two-player">
+                    <button id="two-player">Two Players</button>
+                    <button id="single-player">Single Player</button>
+                </div>
                 <div id="reset">
                     <button id="reset-btn">RESET</button>
                 </div>
@@ -28,19 +32,19 @@
                 <div id="board-grid">
                     <div>Game Board</div>
                     <div id="button-choice">
-                        <button>X</button>
-                        <button>O</button>
+                        <button id="button-X">X</button>
+                        <button id="button-O">O</button>
                     </div>
                     <div id="game-buttons">
-                        <button class="box"></button>
-                        <button class="box"></button>
-                        <button class="box"></button>
-                        <button class="box"></button>
-                        <button class="box"></button>
-                        <button class="box"></button>
-                        <button class="box"></button>
-                        <button class="box"></button>
-                        <button class="box"></button>
+                        <button id="0" class="box"></button>
+                        <button id="1" class="box"></button>
+                        <button id="2" class="box"></button>
+                        <button id="3" class="box"></button>
+                        <button id="4" class="box"></button>
+                        <button id="5" class="box"></button>
+                        <button id="6" class="box"></button>
+                        <button id="7" class="box"></button>
+                        <button id="8" class="box"></button>
                     </div>
                     <div></div> 
                 </div>
